[package]
authors = ["Christopher J. Woodall <chris.j.woodall@gmail.com>"]
build = "build.rs"
name = "stm32f03x-hal"
version = "0.1.0"

[dependencies]
cortex-m = "0.2.3"
r0 = "0.2.0"
stm32f0xx = "0.1.0"

[dependencies.cortex-m-semihosting]
optional = true
version = "0.1.2"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
semihosting = ["cortex-m-semihosting"]

[profile.release]
lto = true
